# TravelShaper

./: README.md
reconciled-docs/: README.md  RUNNING.md
reconciled-docs/docs/: ARCHITECTURE.md  docker-spec.md  test-specification.md
src/: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  RUNNING.md  agent.py  api.py  docker-compose.yml  otel_routing.py  pyproject.toml  run_evals.py  run_traces.py  run_traces.sh  setup.sh
src/.github/workflows/: ci.yml
src/docs/: ARCHITECTURE.md  PRD.md  RUNNING.md  docker-spec.md  evaluation-prompts.md  implementation-plan.md  presentation-outline.md  system-prompt-spec.md  test-specification.md  trace-queries.md  traces-architecture.md
src/evaluations/: README.md  export_spans.py  run_evals.py
src/evaluations/metrics/: answer_completeness.py  frustration.py  tool_correctness.py
src/static/: index.html
src/tests/: test_agent.py  test_api.py  test_otel_routing.py  test_tools.py
src/tools/: __init__.py  cultural_guide.py  flights.py  hotels.py
src/traces/: README.md  run_traces.py
