[tool.poetry]
name = "se-interview"
version = "0.3.1"
description = "A simple LangGraph agent with web search capability"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2"
langchain = "^0.3"
langchain-community = "^0.3"
langchain-openai = "^0.2"
ddgs = "^9.0"
python-dotenv = "^1.0"
fastapi = "^0.115"
uvicorn = "^0.32"
requests = "^2.31"
pytest = {version = "^8", optional = true}
httpx = {version = "^0.27", optional = true}

[tool.poetry.extras]
# NOTE: arize-phoenix and related packages are NOT declared here.
# arize-phoenix-otel has Python version constraints that conflict with
# Poetry's resolver on Python 3.11/3.12. Install them directly with pip
# after running `poetry install` — see RUNNING.md for the exact commands.
dev = ["pytest", "httpx"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
